(4.2.5p156) 2009/01/19 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1118] Fixed sign extension for 32 bit time_t in caljulian() and prettydate().
  Fixed some compiler warnings about missing prototypes.
  Fixed some other simple compiler warnings.
* [Bug 1119] [CID 52] Avoid a possible null-dereference in ntp_crypto.c.
* [Bug 1120] [CID 51] INSIST that peer is non-null before we dereference it.
* [Bug 1121] [CID 47] double fclose() in ntp-keygen.c.
(4.2.5p155) 2009/01/18 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* CHU frequency updates.
* Design assertion fixes for ntp_crypto.c from Dave Mills.
(4.2.5p154) 2009/01/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 992] support interface event change on Linux from
  Miroslav Lichvar.
(4.2.5p153) 2009/01/09 Released by Harlan Stenn <stenn@ntp.org>
* Renamed gsoc_sntp/:fetch-stubs to gsoc_sntp/fetch-stubs to avoid
  file name problems under Windows.
  Removed German umlaut from log msg for 4.2.5p142.
(4.2.5p152) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p6) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>
(4.2.5p151) 2008/12/23 Released by Harlan Stenn <stenn@ntp.org>
* Stats file logging cleanup from Dave Mills.
(4.2.5p150) 2008/12/15 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1099] Fixed wrong behaviour in sntp's crypto.c.
* [Bug 1103] Fix 64-bit issues in the new calendar code.
(4.2.5p149) 2008/12/05 Released by Harlan Stenn <stenn@ntp.org>
* Fixed mismatches in data types and OID definitions in ntpSnmpSubAgent.c
* added a premliminary MIB file to ntpsnmpd (ntpv4-mib.mib)
(4.2.5p148) 2008/12/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1070] Fix use of ntpq_parsestring() in ntpsnmpd.
(4.2.5p147) 2008/11/27 Released by Harlan Stenn <stenn@ntp.org>
* Update gsoc_sntp's GCC warning code.
(4.2.5p146) 2008/11/26 Released by Harlan Stenn <stenn@ntp.org>
* Update Solaris CFLAGS for gsoc_sntp.